--- a/userReadingsDashboard.html
+++ b/userReadingsDashboard.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>ECG Readings Visualization</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -16,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="userHome.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -33,21 +34,31 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="readingsDashboard.html">ECG Chart</a>
+                <a class="nav-link" href="userReadingsDashboard.html">ECG Chart</a>
               </li>
             </ul>
             <form class="d-flex" role="signout">
-              <button class="btn btn-outline-success" type="button" id="signoutbutton">Sign Out</button>
+              <button class="btn btn-outline-success" type="button" id="signOutButton">Sign Out</button>
             </form>
           </div>
         </div>
     </nav>
-
-    <h2 id="msg"></h2>
-    <h2 id="greet"></h2>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/js/home.js" type="module"></script>
-
+    <div class="container">
+        <label for="datePicker">Date</label>
+        <input type="date" id="datePicker">
+        <label for="startTimePicker">Start Time</label>
+        <input type="time" id="startTimePicker">
+        <label for="endTimePicker">End Time</label>
+        <input type="time" id="endTimePicker">
+        <button id="loadDataButton">Load Data</button>
+        <button id="analyzeDataButton"> Analyze Data</button>
+        <div id="chartdiv"></div>
+        <div id="analyzisResult"></div>
+    </div>
+    <script src="../js/user/readingsDashboard.js" type="module"></script>
+    <!-- Resources for amcharts used for ecg graphs-->
+    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 </body>
 </html>
