--- a/liveDashboard.html
+++ b/liveDashboard.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>ECG Readings Visualization</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -37,34 +38,19 @@
               </li>
             </ul>
             <form class="d-flex" role="signout">
-              <button class="btn btn-outline-success" type="button" id="signoutbutton">Sign Out</button>
+              <button class="btn btn-outline-success" type="button" id="signOutButton">Sign Out</button>
             </form>
           </div>
         </div>
     </nav>
-
-
-    <div class="container" style="text-align:center">
-      <h2>Personal Data</h2>
-      <form id="dataForm">
-          <div class="mb-3">
-              <label for="nameField">Name</label>
-              <input type="text" id="nameField" readonly>
-          </div>
-          <div>
-            <label for="cnpField">CNP</label>
-            <input type="text" id="cnpField" readonly>
-          </div>
-          <div>
-              <label for="deviceIdField" class="form-label">Device Id</label>
-              <input type="text" id="deviceIdField">
-          </div>
-          <button id="updateDeviceIdButton">Update Device ID</button>
-      </form>
+    <div class="container">
+        <div id="chartdiv"></div>
+        <div id="analyzisResult"></div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/js/user/home.js" type="module"></script>
-
+    <script src="../js/user/liveDashboard.js" type="module"></script>
+    <!-- Resources for amcharts used for ecg graphs-->
+    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 </body>
 </html>
