Added Live Dashboard

--- a/userLiveDashboard.html
+++ b/userLiveDashboard.html
@@ -44,18 +44,11 @@
         </div>
     </nav>
     <div class="container">
-        <label for="datePicker">Date</label>
-        <input type="date" id="datePicker">
-        <label for="startTimePicker">Start Time</label>
-        <input type="time" id="startTimePicker">
-        <label for="endTimePicker">End Time</label>
-        <input type="time" id="endTimePicker">
-        <button id="loadDataButton">Load Data</button>
-        <button id="analyzeDataButton"> Analyze Data</button>
         <div id="chartdiv"></div>
+        <div id="explanationText"></div>
         <div id="analyzisResult"></div>
     </div>
-    <script src="../js/user/readingsDashboard.js" type="module"></script>
+    <script src="../js/user/liveDashboard.js" type="module"></script>
     <!-- Resources for amcharts used for ecg graphs-->
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
