--- a/adminReadingsDashboard.html
+++ b/adminReadingsDashboard.html
@@ -20,7 +20,7 @@
                 <a class="nav-link active" aria-current="page" href="adminHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="adminLiveDashboard.html">Live Dashboard</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
