--- a/userHome.html
+++ b/userHome.html
@@ -19,7 +19,7 @@
                 <a class="nav-link active" aria-current="page" href="userHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="liveDashboard.html">Live Dashboard</a>
+                <a class="nav-link" href="userLiveDashboard.html">Live Dashboard</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
