--- a/adminLiveDashboard.html
+++ b/adminLiveDashboard.html
@@ -43,13 +43,21 @@
           </div>
         </div>
     </nav>
-    <div class="container">
-        <label for="pacientName">Pacient Name</label>
-        <input type="text" id="pacientName">
-        <button id="loadLiveDataButton">Display live data</button>
-        <div id="chartdiv"></div>
-        <div id="explanationText"></div>
-        <div id="analyzisResult"></div>
+    <div class="container mt-4">
+      <div class="row justify-content-center align-items-end">
+        <div class="col-md-4 offset-md-2">
+            <div class="form-group">
+                <label for="pacientName">Pacient Name</label>
+                <input type="text" id="pacientName" class="form-control">
+            </div>
+        </div>
+        <div class="col-md-4 d-flex align-items-end">
+            <button id="loadLiveDataButton" class="btn btn-primary btn-block">Display live data</button>
+        </div>
+    </div>
+      <div id="chartdiv" class="mt-3"></div>
+      <div id="explanationText" class="mt-3"></div>
+      <div id="analyzisResult" class="mt-3"></div>
     </div>
     <script src="../js/admin/liveDashboard.js" type="module"></script>
     <!-- Resources for amcharts used for ecg graphs-->
