--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
+    <div class="row justify-content-center">
     <form id="MainForm" class="w-25 m-4">
         <h2 class="mb-3"> Login User</h2>
         <div class="form-floating mb-3">
@@ -23,7 +23,7 @@
         <button type="submit" class="btn btn-primary" style="float:  right;">Login</button>
         <a href="register.html"> <button type="button" class="btn btn-primary me-2" style="float:  right;">Sign Up</button> </a>
     </form>
-
+    </div>
     <script src="/js/index.js" type="module"></script>
     
   </body>
