--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
+    <div class="row justify-content-center">
     <form id="MainForm" class="w-25 m-4">
         <h2 class="mb-3"> Register User</h2>
         <div class="form-floating mb-3">
@@ -20,21 +21,32 @@
             <label for="passwordInput">Password</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="nameInput" placeholder="Password">
+            <input type="text" class="form-control" id="nameInput" placeholder="Name">
             <label for="nameInput">Name</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="cnpInput" placeholder="Password">
+            <input type="text" class="form-control" id="cnpInput" placeholder="CNP">
             <label for="cnpInput">CNP</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="deviceIdInput" placeholder="Password">
+            <input type="date" class="form-control" id="birthdayInput" placeholder="Birthday">
+            <label for="birthdayInput">Birthday</label>
+        </div>
+        <div class="form-floating mb-3">
+          <select class="form-select form-control" id="genderInput" >
+              <option value="female">Female</option>
+              <option value="male">Male</option>
+          </select>
+          <label for="genderInput">Gender</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="deviceIdInput" placeholder="DeviceId">
             <label for="deviceIdInput">DeviceId</label>
         </div>
-
         <button type="submit" class="btn btn-primary" style="float:  right;">Create New User</button>
         <a href="index.html"> <button type="button" class="btn btn-primary me-2" style="float:  right;">Sign In</button> </a>
     </form>
+    </div>
     <script src="/js/register.js" type="module"></script>
 
   </body>
