--- a/html/admin/adminLiveDashboard.html
+++ b/html/admin/adminLiveDashboard.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>ECG Readings Visualization</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -37,17 +38,31 @@
               </li>
             </ul>
             <form class="d-flex" role="signout">
-              <button class="btn btn-outline-success" type="button" id="signoutbutton">Sign Out</button>
+              <button class="btn btn-outline-success" type="button" id="signOutButton">Sign Out</button>
             </form>
           </div>
         </div>
     </nav>
-
-    <h2 id="msg"></h2>
-    <h2 id="greet"></h2>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/js/admin/home.js" type="module"></script>
-
+    <div class="container mt-4">
+      <div class="row justify-content-center align-items-end">
+        <div class="col-md-4 offset-md-2">
+            <div class="form-group">
+                <label for="pacientName">Pacient Name</label>
+                <input type="text" id="pacientName" class="form-control">
+            </div>
+        </div>
+        <div class="col-md-4 d-flex align-items-end">
+            <button id="loadLiveDataButton" class="btn btn-primary btn-block">Display live data</button>
+        </div>
+    </div>
+      <div id="chartdiv" class="mt-3"></div>
+      <div id="explanationText" class="mt-3"></div>
+      <div id="analyzisResult" class="mt-3"></div>
+    </div>
+    <script src="../../js/admin/liveDashboard.js" type="module"></script>
+    <!-- Resources for amcharts used for ecg graphs-->
+    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 </body>
 </html>
