--- a/html/user/userLiveDashboard.html
+++ b/html/user/userLiveDashboard.html
@@ -17,10 +17,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="adminHome.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="userHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminLiveDashboard.html">Live Dashboard</a>
+                <a class="nav-link" href="userLiveDashboard.html">Live Dashboard</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,7 +34,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminReadingsDashboard.html">ECG Chart</a>
+                <a class="nav-link" href="userReadingsDashboard.html">ECG Chart</a>
               </li>
             </ul>
             <form class="d-flex" role="signout">
@@ -43,23 +43,12 @@
           </div>
         </div>
     </nav>
-    <div class="container mt-4">
-      <div class="row justify-content-center align-items-end">
-        <div class="col-md-4 offset-md-2">
-            <div class="form-group">
-                <label for="pacientName">Pacient Name</label>
-                <input type="text" id="pacientName" class="form-control">
-            </div>
-        </div>
-        <div class="col-md-4 d-flex align-items-end">
-            <button id="loadLiveDataButton" class="btn btn-primary btn-block">Display live data</button>
-        </div>
+    <div class="container">
+        <div id="chartdiv"></div>
+        <div id="explanationText"></div>
+        <div id="analyzisResult"></div>
     </div>
-      <div id="chartdiv" class="mt-3"></div>
-      <div id="explanationText" class="mt-3"></div>
-      <div id="analyzisResult" class="mt-3"></div>
-    </div>
-    <script src="../js/admin/liveDashboard.js" type="module"></script>
+    <script src="../../js/user/liveDashboard.js" type="module"></script>
     <!-- Resources for amcharts used for ecg graphs-->
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
