Added queue system for live reading

--- a/html/admin/adminLiveDashboard.html
+++ b/html/admin/adminLiveDashboard.html
@@ -45,8 +45,7 @@
         </div>
     </div>
       <div id="chartdiv" class="mt-3"></div>
-      <div id="explanationText" class="mt-3"></div>
-      <div id="analyzisResult" class="mt-3"></div>
+      <div id="lastBatchText" class="mt-3"></div>
     </div>
     <script src="../../js/admin/liveDashboard.js" type="module"></script>
     <!-- Resources for amcharts used for ecg graphs-->
