--- a/html/user/userLiveDashboard.html
+++ b/html/user/userLiveDashboard.html
@@ -33,9 +33,8 @@
         </div>
     </nav>
     <div class="container">
-        <div id="chartdiv"></div>
-        <div id="explanationText"></div>
-        <div id="analyzisResult"></div>
+      <div id="chartdiv" class="mt-3"></div>
+      <div id="lastBatchText" class="mt-3"></div>
     </div>
     <script src="../../js/user/liveDashboard.js" type="module"></script>
     <!-- Resources for amcharts used for ecg graphs-->
