Added interpretation logic to the medical report

--- a/medicalReport.html
+++ b/medicalReport.html
@@ -52,27 +52,27 @@
             <tr>
                 <th>Parameter</th>
                 <th>Measured Value</th>
-                <th>Reference Range (Male, Age 45)</th>
+                <th id="referneceRangeText"></th>
             </tr>
             <tr>
                 <td>RR Intervals</td>
-                <td id="rrIntervalsValue">750 ms</td>
-                <td id="rrIntervalsInterpretation">700 - 1200 ms</td>
+                <td id="rrIntervalsValue"></td>
+                <td id="rrIntervalsRange"></td>
             </tr>
             <tr>
                 <td>BPM (Beats Per Minute)</td>
-                <td id="bpmValue">72 bpm</td>
-                <td id="bpmInterpretation">60 - 80 bpm</td>
+                <td id="bpmValue"></td>
+                <td id="bpmRange"></td>
             </tr>
             <tr>
                 <td>SDNN (Standard Deviation of NN intervals)</td>
-                <td id="sdnnValue">50 ms</td>
-                <td id="sdnnInterpretation">30 - 100 ms</td>
+                <td id="sdnnValue"></td>
+                <td id="sdnnRange"></td>
             </tr>
             <tr>
                 <td>RMSSD (Root Mean Square of Successive Differences)</td>
-                <td id="rmssdValue">30 ms</td>
-                <td>20 - 60 ms</td>
+                <td id="rmssdValue"></td>
+                <td id="rmssdRange"></td>
             </tr>
         </table>
         <h2 class="mt-4">Explanation of Parameters</h2>
