--- a/register.html
+++ b/register.html
@@ -13,34 +13,34 @@
     <form id="MainForm" class="w-25 m-4">
         <h2 class="mb-3"> Register User</h2>
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" autocomplete="off">
             <label for="emailInput">Email address</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+            <input type="password" class="form-control" id="passwordInput" placeholder="Password" autocomplete="off">
             <label for="passwordInput">Password</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="nameInput" placeholder="Name">
+            <input type="text" class="form-control" id="nameInput" placeholder="Name" autocomplete="off">
             <label for="nameInput">Name</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="cnpInput" placeholder="CNP">
+            <input type="text" class="form-control" id="cnpInput" placeholder="CNP" autocomplete="off">
             <label for="cnpInput">CNP</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="date" class="form-control" id="birthdayInput" placeholder="Birthday">
+            <input type="date" class="form-control" id="birthdayInput" placeholder="Birthday" autocomplete="off">
             <label for="birthdayInput">Birthday</label>
         </div>
         <div class="form-floating mb-3">
-          <select class="form-select form-control" id="genderInput" >
+          <select class="form-select form-control" id="genderInput" autocomplete="off">
               <option value="female">Female</option>
               <option value="male">Male</option>
           </select>
           <label for="genderInput">Gender</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="deviceIdInput" placeholder="DeviceId">
+            <input type="text" class="form-control" id="deviceIdInput" placeholder="DeviceId" autocomplete="off">
             <label for="deviceIdInput">DeviceId</label>
         </div>
         <button type="submit" class="btn btn-primary" style="float:  right;">Create New User</button>
