--- a/html/admin/adminHome.html
+++ b/html/admin/adminHome.html
@@ -19,10 +19,10 @@
                 <a class="nav-link active" aria-current="page" href="adminHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminLiveDashboard.html">Live Dashboard</a>
+                <a class="nav-link" href="adminLiveDashboard.html">Live ECG</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminReadingsDashboard.html">ECG Chart</a>
+                <a class="nav-link" href="adminReadingsDashboard.html">ECG History</a>
               </li>
             </ul>
             <form class="d-flex" role="signout">
