--- a/html/admin/adminLiveDashboard.html
+++ b/html/admin/adminLiveDashboard.html
@@ -20,10 +20,10 @@
                 <a class="nav-link active" aria-current="page" href="adminHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminLiveDashboard.html">Live Dashboard</a>
+                <a class="nav-link" href="adminLiveDashboard.html">Live ECG</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="adminReadingsDashboard.html">ECG Chart</a>
+                <a class="nav-link" href="adminReadingsDashboard.html">ECG History</a>
               </li>
             </ul>
             <form class="d-flex" role="signout">
@@ -36,8 +36,8 @@
       <div class="row justify-content-center align-items-end">
         <div class="col-md-4 offset-md-2">
             <div class="form-group">
-                <label for="pacientName">Pacient Name</label>
-                <input type="text" id="pacientName" class="form-control">
+                <label for="pacientCNP">Pacient CNP</label>
+                <input type="text" id="pacientCNP" class="form-control">
             </div>
         </div>
         <div class="col-md-4 d-flex align-items-end">
