--- a/html/user/userReadingsDashboard.html
+++ b/html/user/userReadingsDashboard.html
@@ -20,10 +20,10 @@
                 <a class="nav-link active" aria-current="page" href="userHome.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="userLiveDashboard.html">Live Dashboard</a>
+                <a class="nav-link" href="userLiveDashboard.html">Live ECG</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="userReadingsDashboard.html">ECG Chart</a>
+                <a class="nav-link" href="userReadingsDashboard.html">ECG History</a>
               </li>
             </ul>
             <form class="d-flex" role="signout">
